# fastamu

./: .gitignore  LICENSE  README.md  config.yml.sample  pyproject.toml  pytest.ini
migrations/: env.py
src/: manager.py
src/common/: constants.py  enums.py  types.py
src/common/bases/: dtos.py  projection.py  results.py  schemas.py  services.py
src/common/errors/: base.py  exceptions.py  schemas.py
src/common/utils/: crypto_utils.py  date_utils.py  jwt_utils.py  persian_utils.py  string_utils.py
src/core/: bootstrap.py  config.py  logger.py  provider.py  resources.py
src/infra/es/: analyzers.py  client.py  repository.py  types.py
src/infra/excel/: reader.py  row.py  writer.py
src/infra/postgres/: connection.py  types.py  uow.py
src/infra/postgres/models/: base.py  typing.py
src/infra/postgres/repository/: base.py  typing.py
src/infra/redis/: client.py
src/modules/ops/jobs/: interfaces.py  providers.py
src/modules/ops/jobs/app/: services.py
src/modules/ops/jobs/domain/: schemas.py
src/modules/ops/jobs/routers/: admin.py
src/modules/ops/storage/: interfaces.py  providers.py  resources.py
src/modules/ops/storage/app/: helpers.py  services.py
src/modules/ops/storage/domain/: models.py  schemas.py
src/modules/ops/storage/infra/: repository.py  storage.py
src/modules/ops/storage/routers/: storage.py
src/modules/ops/system/: interfaces.py  providers.py
src/modules/ops/system/app/: services.py
src/modules/ops/system/domain/: schemas.py
src/modules/ops/system/routers/: admin.py
src/tasks/: broker.py  events.py  projection.py  scheduler.py
src/tasks/middlewares/: logging.py
src/web/: app.py  dependencies.py  docs.py  error_handlers.py  response.py
src/web/middlewares/: logging.py
tests/: conftest.py
tests/integration/: test_database.py
