[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastamu"
version = "0.1.0"
description = "A FastAPI + dishka + taskiq modular-monolith template"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Pouya", email = "captainjoker757@gmail.com" }
]
dependencies = [
    "fastapi==0.136.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.0",
    "taskiq-fastapi==0.5.0",
    "alembic==1.18.4",
    "SQLAlchemy==2.0.49",
    "sqlmodel==0.0.38",
    "thefuzz==0.22.1",
    "colorlog==6.10.1",
    "orjson==3.11.5",
    "uvicorn[standard]==0.38.0",
    "gunicorn==23.0.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "typer==0.20.0",
    "yoyo-migrations==9.0.0",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.11",
    "redis==7.1.0",
    "APScheduler==3.11.1",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "openpyxl==3.1.5",
    "xlsxwriter==3.2.9",
    "requests==2.32.5",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
    "email-validator==2.3.0",
    "python-multipart==0.0.20",
    "sentry-sdk==2.46.0",
    "jalali_core==1.0.0",
    "jdatetime==5.2.0",
    "persiantools==5.4.0",
    "pytz==2025.2",
    "python-dateutil==2.9.0.post0",
    "bcrypt==5.0.0",
    "PyJWT==2.10.1",
    "cryptography==46.0.3",
    "rich==14.2.0",
    "taskiq==0.12.1",
    "taskiq-dependencies==1.5.7",
    "taskiq-redis==1.2.1",
    "jdatetime==5.2.0",
    "aiofiles==25.1.0",
    "dishka==1.8.0",
    "elasticsearch[async]==8.19.3",
    "swagger-ui-bundle==1.1.0",
    "fastapi-csrf-protect==1.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "anyio==4.13.0",
    "playwright==1.56.0",
    "watchfiles==1.1.1",
    "ruff",
    "pyright==1.1.390",
]

[project.scripts]
fastamu = "src.manager:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# pytest configuration lives in pytest.ini (single source of truth — pytest.ini
# takes precedence over pyproject, so do not re-add [tool.pytest.ini_options]).

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
# "basic" is pragmatic for an existing codebase; tighten to "strict" per
# package as it's hardened. The rules below are the type-safety floor.
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUntypedFunctionDecorator = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "none"

[tool.fastapi]
entrypoint = "src.web.app:app"
